<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MGS_lockscreen_changer</string>
    <string name="lockscreen_homescreen">Lockscreen or Homescreen</string>
    <string name="both">Both</string>
    <string name="update_interval">Update Interval:</string>
    <string name="settings">Settings:</string>
    <string name="cropLeft">Crop Left Edge:</string>
    <string name="cropRight">Crop Right Edge:</string>
    <string name="_12884106">12884106</string>
    <string name="stop_service">Stop Service</string>
    <string name="start_service">Start Service</string>
    <string name="mutant_garden_seeder_auto_wallpaper_changer">MGS Auto Wallpaper Changer</string>
    <string name="birth_block">Birth Block:</string>
    <string name="pixels">pixels</string>
    <string name="seconds">in days</string>
    <string name="userBirthBlock">12884106</string>
    <string name="userUpdateInterval">84600</string>
    <string name="userVisibleCrop">600</string>
    <string name="last_wallpaper_update">Last Wallpaper Update: %1$s</string>
    <string name="wallpaper_lock">Lockscreen</string>
    <string name="wallpaper_home">Homescreen</string>
    <string name="wallpaper_both">Both</string>
</resources>
